src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>rC_Giving__Payment_Frequency__c</fullName>
        <description>Expected timing of payments from donor.</description>
        <inlineHelpText>Expected timing of payments from donor.</inlineHelpText>
        <label>Payment Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>One Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Payment_Method_Selected__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Default Payment Method chosen for this Giving record. Open Transactions will be updated if a new Payment Method is selected here.</description>
        <inlineHelpText>Default Payment Method chosen for this Giving record. Open Transactions will be updated if a new Payment Method is selected here.</inlineHelpText>
        <label>Selected Payment Method</label>
        <referenceTo>rC_Giving__Payment_Method__c</referenceTo>
        <relationshipLabel>Giving</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Payment_Method__c</fullName>
        <description>Charge Card and EFT are processed through a third party vendor such as Sage. Third Party payments encompass workplace giving, foundation pay, vehicle donation, etc.</description>
        <inlineHelpText>Charge Card and EFT are processed through a third party vendor such as Sage. Third Party payments encompass workplace giving, foundation pay, vehicle donation, etc.</inlineHelpText>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Cash/Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paypal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party Charge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voucher</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Payment_Reference_Number__c</fullName>
        <description>Automatically populated, this field reflects the reference number returned from the payment processor.</description>
        <inlineHelpText>The reference number returned from the payment processor</inlineHelpText>
        <label>Payment Reference #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Performance_Measures__c</fullName>
        <description>Performance measures as set by grantor in contract agreement</description>
        <inlineHelpText>Performance measures as set by grantor in contract agreement</inlineHelpText>
        <label>Performance Measures</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Pipeline_Amount__c</fullName>
        <description>Automatically populated field including amounts from all open transactions. See the Giving Stage configuration for more details.</description>
        <label>Pipeline Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Pipeline_Bar__c</fullName>
        <description>Formula field reflecting the percentage of amounts from all open transactions.</description>
        <formula>IMAGE(&apos;/img/samples/color_yellow.gif&apos;, &apos;yellow&apos;, 10,  MIN(150, rC_Giving__Pipeline_Ratio__c)) + &apos; &apos; + IF(rC_Giving__Pipeline_Amount__c &lt; 0, &apos;-&apos;, &apos;&apos;) + TEXT(rC_Giving__Pipeline_Ratio__c) + &apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pipeline Bar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Pipeline_Ratio__c</fullName>
        <description>Formula field reflecting the percentage of amounts from all open transactions.</description>
        <formula>IF(BLANKVALUE(rC_Giving__Expected_Giving_Amount__c, 0) == 0, 0, ABS(CEILING(100 * BLANKVALUE(rC_Giving__Pipeline_Amount__c, 0) / rC_Giving__Expected_Giving_Amount__c)))</formula>
        <label>Pipeline Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Planned_Giving__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Link to associated Planned Giving record.</description>
        <inlineHelpText>Link to associated Planned Giving record.</inlineHelpText>
        <label>Planned Giving</label>
        <referenceTo>rC_Giving__Planned_Giving__c</referenceTo>
        <relationshipLabel>Giving</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Pre_Award_Cost_Approval__c</fullName>
        <description>Approved spend amount before initial funds are received.</description>
        <inlineHelpText>Approved spend amount before initial funds are received.</inlineHelpText>
        <label>Pre-Award Cost Approval</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Main contact at Grantor agency.</description>
        <inlineHelpText>Main contact at Grantor agency.</inlineHelpText>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Grants (Primary Contact)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Projected_Amount__c</fullName>
        <description>Projected amount to be received from grantor (as contrasted to amount requested and amount received).</description>
        <inlineHelpText>Projected amount to be received from grantor (as contrasted to amount requested and amount received).</inlineHelpText>
        <label>Projected Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Projected_Bar__c</fullName>
        <description>Formula field providing the percentage of Giving amounts marked as projected per your giving stage configuration.</description>
        <formula>IMAGE(&apos;/img/samples/color_green.gif&apos;, &apos;green&apos;, 10,  MIN(150, rC_Giving__Projected_Ratio__c)) + &apos; &apos; + IF(rC_Giving__Projected_Amount__c &lt; 0, &apos;-&apos;, &apos;&apos;) + TEXT(rC_Giving__Projected_Ratio__c) + &apos;%&apos; + IF(ISBLANK(rC_Giving__Parent__c), &apos;&apos;, &apos; of parent proposal&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Bar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Projected_Ratio__c</fullName>
        <description>Formula field providing the percentage of Giving amounts marked as projected per your giving stage configuration.</description>
        <formula>IF(ISBLANK(rC_Giving__Parent__c), 100, IF(BLANKVALUE(rC_Giving__Parent__r.rC_Giving__Projected_Amount__c, 0) == 0, 0, ABS(CEILING(100 * BLANKVALUE(rC_Giving__Projected_Amount__c, 0) / rC_Giving__Parent__r.rC_Giving__Projected_Amount__c))))</formula>
        <label>Projected Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Proposed_End_Date__c</fullName>
        <description>End date as included in the proposal.</description>
        <inlineHelpText>End date as included in the proposal.</inlineHelpText>
        <label>Proposed End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Proposed_Start_Date__c</fullName>
        <description>Start date as included in the proposal.</description>
        <inlineHelpText>Start date as included in the proposal.</inlineHelpText>
        <label>Proposed Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Prospect_Rating__c</fullName>
        <description>Manually populated field rating the likeliness of closing this giving record.</description>
        <label>Prospect Rating</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Recipient_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Deprecated Recipient Account.</description>
        <label>@Deprecated(Version=2.2)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Giving As Recipient</relationshipLabel>
        <relationshipName>Opportunities_Recipient_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Refund_Method__c</fullName>
        <description>Deprecated Value - Manually populated field indicating the payment method for a refund.</description>
        <label>Refund Method (@Deprecated)</label>
        <picklist>
            <picklistValues>
                <fullName>Charge Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Refund_Reason__c</fullName>
        <description>Manually populated field indicating the reason for a refund request.</description>
        <label>Refund Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Refunded_Amount__c</fullName>
        <description>Auto populated, aggregated sum of the child transactions marked as refunds (any stage, excluding canceled refunds).</description>
        <inlineHelpText>Aggregated sum of the child transactions marked as refunds (any stage, excluding canceled refunds)</inlineHelpText>
        <label>Refunded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Refunded_Bar__c</fullName>
        <description>Auto Populated, percentage of Giving transaction dollars marked as refunds (any stage, excluding canceled refunds).</description>
        <formula>IMAGE(&apos;/img/samples/color_red.gif&apos;, &apos;red&apos;, 10, rC_Giving__Refunded_Ratio__c) + &apos; &apos; + IF(rC_Giving__Refunded_Amount__c &lt; 0, &apos;-&apos;, &apos;&apos;) + TEXT(rC_Giving__Refunded_Ratio__c) + &apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage of Giving transaction dollars marked as refunds (any stage, excluding canceled refunds).</inlineHelpText>
        <label>Refunded Bar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Refunded_Ratio__c</fullName>
        <description>Auto Populated, percentage of Giving transaction dollars marked as refunds (any stage, excluding canceled refunds).</description>
        <formula>IF(BLANKVALUE(rC_Giving__Expected_Giving_Amount__c, 0) == 0, 0, ABS(CEILING(100 * BLANKVALUE(rC_Giving__Refunded_Amount__c, 0) / rC_Giving__Expected_Giving_Amount__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage of Giving transaction dollars marked as refunds (any stage, excluding canceled refunds).</inlineHelpText>
        <label>Refunded Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Renew_By_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Manually populated field indicating giving renewal form will be sent by Email.</description>
        <label>Renew By Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Renew_By_Postal_Mail__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Manually populated field indicating giving renewal form will be sent by mail.</description>
        <label>Renew By Postal Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Reporting_Schedule__c</fullName>
        <description>Manually populated,indicates the frequency that grant reports are scheduled to be disbursed as agreed in donor contract. These can include financial statements, narrative assessments, Impact reports etc... Likely not standard rC reports.</description>
        <label>Reporting Schedule</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Requested_Amount__c</fullName>
        <description>Amount requested in proposal (as contrasted to amount expected and amount received).</description>
        <inlineHelpText>Amount requested in proposal (as contrasted to amount expected and amount received).</inlineHelpText>
        <label>Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Response_Mechanism__c</fullName>
        <description>This is the method in which the constituent is expected to respond to the associated Campaign. This value is copied from associated Campaign at gift creation, and can be manually changed if necessary.</description>
        <inlineHelpText>This is the method in which the constituent is expected to respond to the associated Campaign. This value is copied from associated Campaign at gift creation, and can be manually changed if necessary.</inlineHelpText>
        <label>Response Mechanism</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Retention_Rate__c</fullName>
        <description>Manually populated field indicating the retention rate.</description>
        <label>Retention Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Rollup_Allocations__c</fullName>
        <description>System-level field used for sync/async/data loader recalculation of child allocation records</description>
        <inlineHelpText>System-level field used for sync/async/data loader recalculation of child allocation records</inlineHelpText>
        <label>Rollup Allocations</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Rollup_Giving__c</fullName>
        <description>System-level field used for sync/async/data loader recalculation of child giving records</description>
        <label>Rollup Giving</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Rollup_Transactions__c</fullName>
        <description>System-level field used for sync/async/data loader recalculation of child transaction records</description>
        <inlineHelpText>This field stores the Date/Time that the child transactions (if any) had their values rolled up to the parent Giving record level.</inlineHelpText>
        <label>Rollup Transactions</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Sale_Date__c</fullName>
        <description>Deprecated Sale Date.</description>
        <inlineHelpText>Value of gift available for tax deduction.</inlineHelpText>
        <label>@Deprecated(Version=2.2)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Sale_Proceeds__c</fullName>
        <description>Deprecated Sale Proceeds.</description>
        <inlineHelpText>Amount organization receives from Sale of gift.</inlineHelpText>
        <label>@Deprecated(Version=2.2)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Solicitation_Status__c</fullName>
        <description>Status of Moves Management</description>
        <inlineHelpText>Status of Moves Management</inlineHelpText>
        <label>Solicitation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verbal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Written</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Committed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Solicitation_Type__c</fullName>
        <description>Giving Type being solicited (Renewal, Additional, etc) or communication medium to donor (TV, Radio, Raffle, etc). This value is copied from associated Campaign at gift creation, and can be manually changed if necessary.</description>
        <inlineHelpText>Giving Type being solicited (Renewal, Additional, etc) or communication medium to donor (TV, Radio, Raffle, etc). This value is copied from associated Campaign at gift creation, and can be manually changed if necessary.</inlineHelpText>
        <label>Solicitation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Microdonation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Sorting_Number__c</fullName>
        <description>Formula field providing a &quot;Sorting #&quot; for the Giving record.</description>
        <formula>IF(ISBLANK(rC_Giving__Parent__c), LPAD(TEXT(CloseDate -  BLANKVALUE($Setup.rC_Giving__Opportunity_Setting__c.rC_Giving__Sorting_Number_Start_Date__c, DATEVALUE(&apos;1970-01-01&apos;))), 5, &apos;0&apos;) + CASE(rC_Giving__Giving_Type__c, &apos;New&apos;, &apos;1&apos;, &apos;Additional&apos;, &apos;2&apos;, &apos;Upgrade&apos;, &apos;3&apos;, &apos;Renewal&apos;, &apos;5&apos;, &apos;Rejoin&apos;, &apos;7&apos;, &apos;?&apos;), LPAD(TEXT(rC_Giving__Parent__r.CloseDate - BLANKVALUE($Setup.rC_Giving__Opportunity_Setting__c.rC_Giving__Sorting_Number_Start_Date__c, DATEVALUE(&apos;1970-01-01&apos;))), 5, &apos;0&apos;)  + CASE(rC_Giving__Parent__r.rC_Giving__Giving_Type__c, &apos;New&apos;, &apos;1&apos;, &apos;Additional&apos;, &apos;2&apos;, &apos;Upgrade&apos;, &apos;3&apos;, &apos;Renewal&apos;, &apos;5&apos;, &apos;Rejoin&apos;, &apos;7&apos;, &apos;?&apos;) + LPAD(TEXT(CloseDate - rC_Giving__Parent__r.CloseDate), 5, &apos;0&apos;) + CASE(rC_Giving__Transaction_Type__c, &apos;Payment&apos;, &apos;+&apos;, &apos;Refund&apos;, &apos;-&apos;, &apos;&apos;))</formula>
        <label>Sorting #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Source_Code__c</fullName>
        <description>Organization defined unique code for associated Campaign. This value is copied from associated Campaign at gift creation.</description>
        <inlineHelpText>Organization defined unique code for associated Campaign. This value is copied from associated Campaign at gift creation.</inlineHelpText>
        <label>Source Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Summary_Link__c</fullName>
        <description>Link to associated Summary record.</description>
        <formula>IF(ISBLANK(rC_Giving__Summary__c), NULL, HYPERLINK(&apos;/&apos; + rC_Giving__Summary__c, rC_Giving__Summary__r.rC_Giving__Title__c, &apos;_self&apos;))</formula>
        <inlineHelpText>Link to associated Summary record.</inlineHelpText>
        <label>Summary Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to associated Summary record.</description>
        <inlineHelpText>Link to associated Summary record.</inlineHelpText>
        <label>Summary</label>
        <referenceTo>rC_Giving__Summary__c</referenceTo>
        <relationshipLabel>Giving (Summary)</relationshipLabel>
        <relationshipName>Giving</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Support_Designation__c</fullName>
        <description>Designation on associated Campaign for where gift should be applied - this typically is related to General Accounting Unit. This value is copied from associated Campaign at gift creation, and can be manually changed if necessary.</description>
        <inlineHelpText>Designation on associated Campaign for where gift should be applied - this typically is related to General Accounting Unit. This value is copied from associated Campaign at gift creation, and can be manually changed if necessary.</inlineHelpText>
        <label>Support Designation</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Suspended_End_Date__c</fullName>
        <description>Last day of transaction payment suspension</description>
        <inlineHelpText>Last day of transaction payment suspension</inlineHelpText>
        <label>Suspended End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Suspended_Start_Date__c</fullName>
        <description>First day of transaction payment suspension</description>
        <inlineHelpText>First day of transaction payment suspension</inlineHelpText>
        <label>Suspended Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Tax_Deductible_Amount__c</fullName>
        <description>Used for In Kind gifts - Value of gift available for tax deduction.</description>
        <inlineHelpText>Value of gift available for tax deduction.</inlineHelpText>
        <label>Tax Deductible Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Transaction_Type__c</fullName>
        <description>Designates Transaction as a Payment from constituent or Refund to constituent.</description>
        <inlineHelpText>Designates Transaction as a Payment from constituent or Refund to constituent.</inlineHelpText>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Tribute_Comments__c</fullName>
        <description>Comments section reserved for Tribute information.</description>
        <inlineHelpText>Comments section reserved for Tribute information.</inlineHelpText>
        <label>Tribute Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Tribute_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact to which tribute is to be applied</description>
        <inlineHelpText>Contact to which tribute is to be applied</inlineHelpText>
        <label>Tribute Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Tribute Contact)</relationshipLabel>
        <relationshipName>Opportunities_Tribute_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Tribute_Delivered_Date__c</fullName>
        <description>Date Tribute was delivered.</description>
        <inlineHelpText>Date Tribute was delivered.</inlineHelpText>
        <label>Tribute Delivered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Tribute_Delivery__c</fullName>
        <description>Method in which Tribute is delivered.</description>
        <inlineHelpText>Method in which Tribute is delivered.</inlineHelpText>
        <label>Tribute Delivery</label>
        <picklist>
            <picklistValues>
                <fullName>On Air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Tribute_Description__c</fullName>
        <description>Description and details of tribute to be public viewed.</description>
        <inlineHelpText>Description and details of tribute to be public viewed.</inlineHelpText>
        <label>Tribute Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Tribute_Effective_Date__c</fullName>
        <description>Date Tribute can be announced.</description>
        <inlineHelpText>Date Tribute can be announced.</inlineHelpText>
        <label>Tribute Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Tribute_Name__c</fullName>
        <description>Title of the tribute.</description>
        <inlineHelpText>Title of the tribute.</inlineHelpText>
        <label>Tribute Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Tribute_Type__c</fullName>
        <description>Type of Tribute</description>
        <inlineHelpText>Type of Tribute</inlineHelpText>
        <label>Tribute Type</label>
        <picklist>
            <picklistValues>
                <fullName>In Memory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Honor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Celebration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Update_Transactions__c</fullName>
        <description>System-level field used for sync/async/data loader recalculation of transaction records</description>
        <inlineHelpText>System-level field used for sync/async/data loader recalculation of transaction records</inlineHelpText>
        <label>Update Transactions</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Valuation_Date__c</fullName>
        <description>Used for Inkind Giving to show the date the &quot;Expected Giving Amount&quot; was determined.</description>
        <inlineHelpText>Used for Inkind Giving to show the date the &quot;Expected Giving Amount&quot; was determined.</inlineHelpText>
        <label>Valuation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Valuation_Type__c</fullName>
        <description>Used for Inkind Giving to show the type of valuation that the &quot;Expected Giving Amount&quot; represents.</description>
        <inlineHelpText>Used for Inkind Giving to show the type of valuation that the &quot;Expected Giving Amount&quot; represents.</inlineHelpText>
        <label>Valuation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Assessed Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Face Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Value</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>rC_Giving__Corporate_Underwriting</fullName>
        <active>true</active>
        <businessProcess>rC_Giving__Corporate Underwriting</businessProcess>
        <description>Used for Corporate Underwriting opportunities. (as known as Corporate Support or Corporate Sponsorship)</description>
        <label>Corporate Underwriting</label>
    </recordTypes>
    <recordTypes>
        <fullName>rC_Giving__Donation</fullName>
        <active>true</active>
        <businessProcess>rC_Giving__Donation</businessProcess>
        <description>Gift to non-Annual programs (Capital Campaign, Restricted Giving, Planned Giving, Matching Gifts, Underwriting, etc.)</description>
        <label>Donation</label>
    </recordTypes>
    <recordTypes>
        <fullName>rC_Giving__Grant</fullName>
        <active>true</active>
        <businessProcess>rC_Giving__Grant</businessProcess>
        <description>Gifts which require an application process and may come with reporting requirements and deliverables</description>
        <label>Grant</label>
    </recordTypes>
    <recordTypes>
        <fullName>rC_Giving__Inkind</fullName>
        <active>true</active>
        <businessProcess>rC_Giving__Inkind</businessProcess>
        <description>Gift of goods such as food donation</description>
        <label>Inkind</label>
    </recordTypes>
    <recordTypes>
        <fullName>rC_Giving__Membership</fullName>
        <active>true</active>
        <businessProcess>rC_Giving__Membership</businessProcess>
        <description>Gift that results in annual membership and is awarded benefits</description>
        <label>Membership</label>
    </recordTypes>
    <recordTypes>
        <fullName>rC_Giving__Proposal</fullName>
        <active>true</active>
        <businessProcess>rC_Giving__Proposal</businessProcess>
        <description>Moves Management</description>
        <label>Proposal</label>
    </recordTypes>
</CustomObject>